[metadata]
name = datetime_format
version = attr: datetime_format.__version__
description = Manipulate and format datetimes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/nadime/datetime_format
author = nadime
author_email = scottpriceasher@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
packages =
    datetime_format
install_requires =
    attr
    datetime
    holidays
    python-dateutil
    tzlocal
python_requires = >=3.7

[bumpversion]
current_version = 0.0.1

[flake8]
extend-ignore = E203,F401,W503,W504
exclude = __init__.py,*.pyc,tests.py,build,dist
paths = ./datetime_format/ ./tests/

[rstcheck]
ignore_language = python
ignore_directives = (No directive entry.*)
